force-app/main/default/objects/animalos__Score__c/animalos__Score__c.object-meta.xml
<CustomObject>
    <label>Score</label>
    <nameField>
        <displayFormat>S{0000000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>