force-app/main/default/objects/animalos__Score__c/fields/animalos__Score__c.field-meta.xml
<CustomField>
    <fullName>animalos__Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>