force-app/main/default/objects/animalos__Score__c/fields/animalos__Score_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Score_Date_Time__c</fullName>
    <label>Score Date/Time</label>
    <type>DateTime</type>
</CustomField>