force-app/main/default/objects/animalos__Score__c/fields/animalos__Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Behaviour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>