force-app/main/default/objects/animalos__Score__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>